s10: Planner+DAG source-fidelity repair - getter/setter API, PromptAssembler(PLANNER), replan(), PlanningStreamRenderer, 134 tests pass